# genvm

./: .clang-format  .clang-format-ignore  .editorconfig  .genvm-monorepo-root  .gitattributes  .gitignore  .gitmodules  .gitthirdparty  .pre-commit-config.yaml  .semgrepignore  CNAME  README.md  env.sh  renovate.json  ruff.toml  rust-toolchain.toml  shell.nix  yabuild-default-conf.rb  yabuild.rb
executor/: .gitignore  Cargo.toml  build.rs  default-config.json  default-config.yaml  yabuild.rb
executor/codegen/data/: builtin-prompt-templates.json  host-fns.json  public-abi.json  result-codes.json
executor/codegen/templates/: host-py.rb  host-rs.rb  py.rb  rs.rb
executor/common/: Cargo.toml  build.rs
executor/common/fuzz/: genvm-common-decode.rs  genvm-common-encode.rs
executor/common/fuzz/inputs-genvm-common-decode/: sample
executor/common/src/: cancellation.rs  lib.rs  templater.rs  version.rs
executor/common/src/calldata/: bin.rs  de.rs  mod.rs  se.rs  types.rs
executor/common/src/logger/: error.rs  log_anyhow.rs  mod.rs
executor/modules/: yabuild.rb
executor/modules/common/: Cargo.toml
executor/modules/common/src/: interfaces.rs  lib.rs
executor/modules/default-impl/common/: Cargo.toml
executor/modules/default-impl/llm-funcs/: Cargo.toml  tiny-ollama.sh
executor/modules/default-impl/web-funcs/: Cargo.toml
executor/modules/implementation/: Cargo.toml  llm-default-config.yaml  web-default-config.yaml  yabuild.rb
executor/modules/implementation/common/: Cargo.toml
executor/modules/implementation/llm/: Cargo.toml  default-config.yaml  yabuild.rb
executor/modules/implementation/llm-funcs/: Cargo.toml
executor/modules/implementation/scripting/: greyboxing.lua  inspect.lua  (+6 more)
executor/modules/interfaces/: Cargo.toml
executor/src/: caching.rs  config.rs  errors.rs  lib.rs  main.rs  memlimiter.rs  mmap.rs  modules.rs  plugin_loader.rs  public_abi.rs  runner.rs  string_templater.rs  ustar.rs  version_timestamps.rs  vm.rs
executor/src/calldata/: bin.rs  de.rs  error.rs  mod.rs  parse.rs  sd.rs  se.rs  types.rs
executor/src/exe/: mod.rs  precompile.rs  run.rs
executor/src/host/: host_fns.rs  message.rs  mod.rs  result_codes.rs
executor/src/wasi/: base.rs  cdrpc.rs  common.rs  genlayer_sdk.rs  gl_call.rs  mod.rs  preview1.rs
executor/testdata/cases/: _hello_world_.jsonnet  _hello_world_class.jsonnet  _hello_world_class.py  _hello_world_class_nondet.jsonnet  _hello_world_class_nondet.py  _hello_world_trivial.py
executor/testdata/runner/: base_host.py  host_fns.py  mock_host.py  requirements.txt  result_codes.py  run.py
executor/testdata/templates/: message.json  simple.jsonnet  two.jsonnet
executor/testdata/web-container/: entry.sh  run-test-docker.sh  server.py  webdriver.dockerfile
genvm/: Cargo.toml  default-config.json  rust-toolchain.toml  yabuild.rb
genvm/codegen/data/: host-fns.json
genvm/codegen/templates/: host-py.rb  host-rs.rb
genvm/modules/common/: Cargo.toml
genvm/src/: driver.rs  host.rs  lib.rs  main.rs  node_iface.rs  plugin_loader.rs  runner.rs  string_templater.rs  vm.rs
genvm/src/host/: mod.rs
genvm/src/wasi/: base.rs  common.rs  genlayer_sdk.rs  mod.rs  preview1.rs
genvm/testdata/: 0.json  0.py  fake-dlclose.c  genvm-python.wasm  sdk.frozen  softfloat.wasm  threads.py
genvm/testdata/cases/: 0.json  0.py  call_view.jsonnet  call_view.stdout  call_view_from.py  call_view_to.py  get_webpage.jsonnet  get_webpage.py  get_webpage.stdout  method_no_fuel.jsonnet  method_private.jsonnet  method_public.jsonnet  method_public.stdout  method_retn.jsonnet  method_retn.stdout  method_retn_ser.jsonnet  method_retn_ser.stdout  method_rollback.jsonnet  method_rollback.stdout  methods.py  nondet_trivial.jsonnet  nondet_trivial.py  nondet_trivial.stdout  storage.jsonnet  storage.py  storage.stdout  storage_persists.0.stdout  storage_persists.1.stdout  storage_persists.jsonnet  storage_persists.py  storage_tree_map.jsonnet  storage_tree_map.py  threads.jsonnet  threads.py  typing_is_ok.jsonnet  typing_is_ok.py  typing_is_ok.stdout
genvm/testdata/runner/: host_fns.py  mock_host.py  run.py
genvm/testdata/templates/: runners.jsonnet  simple.jsonnet  two.jsonnet
genvm/tests/: fuel.rs
modules/interfaces/: Cargo.toml
modules/interfaces/src/: lib.rs
runners/cpython-and-ext/extension/: Cargo.toml  Dockerfile  docker-build.sh  lib.sha256  rust-toolchain.toml  sum.sha256  yabuild.rb
runners/genlayer-py-std/: .gitignore  LICENSE  default.nix  pyproject.toml  yabuild.rb
runners/genlayer-py-std/docs_base/: conf.py
runners/genlayer-py-std/fuzz/: fuzz_common.py  resave.py  run.sh
runners/genlayer-py-std/src/: contract.py
runners/genlayer-py-std/tests/: __init__.py  common.py  test_address.py  test_calldata.py  test_contract_no_init.py  test_create2.py  test_eth.py  test_eth_contract.py  test_eth_cross.py  test_eth_decoding.py  test_eth_encoding.py  test_events.py  test_fuzz_calldata.py  test_run_fuzz_for_coverage.py  test_schema.py  test_storage_classes.py  test_storage_data_class.py  test_storage_dt.py  test_storage_fixed_vec.py  test_storage_nested.py  test_storage_to_calldata.py  test_storage_tree_map.py  test_storage_tree_map_smoke.py  test_storage_vec.py  test_storage_vecdb.py  test_type_descs.py
runners/genlayer-std/: pyproject.toml  yabuild.rb
runners/genlayer-std/tests/: test_calldata.py  test_storage_tree_map.py
sdk-python/: .gitignore  Cargo.toml  README.md  build-debug-sdk.sh  build.rs  build.sh  pyproject.toml  yabuild.rb
sdk-python/.cargo/: config.toml
sdk-python/cpython-build/: Dockerfile  README.md
sdk-python/cpython-build/scripts/: build-all.sh  build-bz2.sh  build-lzma.sh  build-openssl.sh  build-python-host.sh  build-python.sh  build-zlib.sh
sdk-python/py-stub/genlayer/: wasi.pyi
sdk-python/py-tests/: common.py  test_calldata.py  test_storage_generics.py  test_storage_tree_map.py  test_storage_vec.py
sdk-python/py/genlayer/: _runner.py  _storage.py  _storage_tree_map.py  calldata.py  sdk.py  storage.py  types.py
sdk-python/src/: build_debug_sdk.rs  lib.rs  main.rs  pyimpl.rs
(+689 files in other folders)
