[package]
name = "genvm-python"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "genvm-python"
path = "src/main.rs"

[[bin]]
name = "genvm-python-build-debug-sdk"
path = "src/build_debug_sdk.rs"
required-features = ["sdk-debug"]

[dependencies]
rustpython = { version = "0.4.0", default-features = false, features = ["stdlib", "freeze-stdlib"] }
rustpython-vm = { version = "0.4.0", default-features = false }
rustpython-derive = { version = "0.4.0", default-features = false }
rustpython-compiler-core = { version = "0.4.0", default-features = false }
rustpython-compiler = { version = "0.4.0", default-features = false }

genvm-sdk-rust = { path = "../sdk-rust", default-features = false }
anyhow = "1.0.86"
softfloat = "1.0.0"

[build-dependencies]
glob = "0.3"

[features]
sdk-debug = []
