[package]
name = "genvm-modules-interfaces"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
async-trait = "0.1.85"
tokio = { version = "1.43.0", features = ["rt", "rt-multi-thread", "time", "macros", "sync"], default-features = false}
serde_yaml = "0.9.34"
serde_json = "1.0.140"
serde_derive = "1.0.219"
serde = "1.0.219"
regex = { version = "1.11.1", default-features = false, features = ["std"] }
