[tool.poetry]
name = "genvm-sdk-python"
version = "0.1.0"
description = ""
authors = ["Kira Prokopenko <kira@yeager.ai>", "Yeager AI Corp"]
#readme = "README.md"
packages = [
    { include = "genlayer", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-xdist = "^3.6.1"
pytest-cov = "^6.0.0"
sentence-transformers = "^3.2.1"

[tool.poetry.group.generators.dependencies]
sphinx = "^8.1.3"
pyright = "^1.1.390"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
addopts = "--cov=src/genlayer/py --cov-report term-missing --cov-fail-under=75"

[tool.mypy]
exclude  = [
    "tests",
    "src/cloudpickle",
]
