cargo-features = ["profile-rustflags"]

[package]
name = "genvm-modules-default-web"
version = "0.1.0"
edition = "2021"

[profile.dev]
rustflags = [
    #"-Zsanitizer=memory",
    #"-Zsanitizer=leak",
    #"--remap-path-prefix=src/=genvm/executor/modules/default-impl/web-funcs/src/"
]

[lib]
crate-type=["cdylib"]

[dependencies]
anyhow = { version = "1.0.86", features = [] }
encoding_rs = { version = "0.8.34", features = []}
encoding_rs_io = "0.1.7"
genvm-modules-common ={ path = "../../common" }
isahc = "1.7.2"
libc = "0.2.158"
serde = "1.0.210"
serde_derive = "1.0.210"
serde_json = "1.0.128"
url = "2.5.2"
