[package]
name = "genvm-modules-impl-common"
version = "0.1.0"
edition = "2021"

[lib]

[dependencies]
anyhow = "1.0.86"
encoding_rs_io = "0.1.7"
isahc = "1.7.2"
libc = "0.2.158"
log = { version = "0.4.25", features = ["kv_unstable_serde"] }
regex = "1.11.1"
rmp-serde = "1.3.0"
serde = "1.0.215"
serde_derive = "1.0.215"
tokio = { version = "1.42.0", features = ["macros", "rt", "rt-multi-thread", "time"] }
genvm-modules-interfaces = { path = "../../interfaces" }
