[package]
name = "genvm-modules-impl-common"
version = "0.1.0"
edition = "2021"

[lib]

[dependencies]
anyhow = "1.0.86"
log = { version = "0.4.25", features = ["kv_unstable_serde"] }
regex = "1.11.1"
serde = "1.0.215"
serde_derive = "1.0.215"
tokio = { version = "1.42.0", features = ["macros", "rt", "rt-multi-thread", "time"] }
genvm-modules-interfaces = { path = "../../interfaces" }
reqwest = "0.12.12"
crossbeam = "0.8.4"
