[package]
name = "genvm-modules-impl-common"
version = "0.1.0"
edition = "2021"

[lib]

[dependencies]
genvm-common = { path = "../../../common" }
genvm-modules-interfaces = { path = "../../interfaces" }

anyhow = "1.0.86"
log = { version = "0.4.25", features = ["kv_unstable_serde"] }
regex = "1.11.1"
serde = "1.0.215"
serde_derive = "1.0.215"
tokio = { version = "1.43.0", features = ["rt", "rt-multi-thread", "time", "macros", "sync"], default-features = false}
reqwest = { version = "0.12.12", features = ["cookies", "gzip", "rustls-tls", "charset", "http2"], default-features = false}
crossbeam = "0.8.4"
futures-util = "0.3.31"
tokio-tungstenite = "0.26.2"
serde_json = "1.0.140"
