cargo-features = ["profile-rustflags"]

[package]
name = "genvm-modules-default-llm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type=["cdylib"]

[profile.dev]
rustflags = [
    #"-Zsanitizer=leak",
    #"--remap-path-prefix=src/=genvm/executor/modules/default-impl/llm-funcs/src/"
]

[dependencies]
anyhow = { version = "1.0.86", features = [] }
encoding_rs_io = "0.1.7"
genvm-modules-interfaces = { path = "../../interfaces" }
genvm-modules-impl-common ={ path = "../common" }
isahc = "1.7.2"
serde = "1.0.210"
serde_derive = "1.0.210"
serde_json = "1.0.128"
regex = "1.10.6"
log = { version = "0.4.25", features = ["kv_unstable_serde"] }
