[package]
name = "genvm-module-llm"
version = "0.1.0"
edition = "2021"

[dependencies]
genvm-modules-interfaces = { path = "../../interfaces" }
genvm-modules-impl-common ={ path = "../common" }
genvm-common = { path = "../../../common" }

anyhow = { version = "1.0.97", features = [] }
serde = { version = "1.0.219", features = ["rc"]}
serde_derive = "1.0.219"
serde_json = "1.0.140"
log = { version = "0.4.27", features = ["kv_unstable_serde"] }
tokio = { version = "1.44.1", features = ["rt", "rt-multi-thread", "net", "time", "macros", "sync"], default-features = false}
reqwest = { version = "0.12.15", features = ["cookies", "gzip", "rustls-tls", "charset", "http2"], default-features = false}
serde_yaml = "0.9.34"
clap = { version = "4.5.35", features = ["derive"] }
signal-hook = "0.3.17"
mlua = { version = "0.10.3", default-features = false, features = ["anyhow", "lua53", "async", "serialize", "vendored", "send", "error-send", "userdata-wrappers"] }
async-trait = "0.1.88"
