[package]
name = "genvm-modules-default-web"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.86", features = [] }
genvm-modules-interfaces = { path = "../../interfaces" }
genvm-modules-impl-common ={ path = "../common" }
serde = { version = "1.0.210", features = ["rc"]}
serde_derive = "1.0.210"
serde_json = "1.0.128"
tokio = { version = "1.43.0", features = ["rt", "rt-multi-thread", "time", "macros", "sync"], default-features = false}
url = "2.5.2"
log = { version = "0.4.25", features = ["kv_unstable_serde"] }
async-trait = "0.1.85"
reqwest = { version = "0.12.12", features = ["cookies", "gzip", "rustls-tls"]}
